--- a/styles/projects.css
+++ b/styles/projects.css
@@ -88,7 +88,7 @@ header h2 a{
     width: 60px;
     height: 60px;
     margin-right: 20px;
-    background: url('/images/menu-hamburger.png');
+    background: url('../images/menu-hamburger.png');
     filter: invert(1);
     background-repeat: no-repeat;
     background-size: 40px;
@@ -98,7 +98,7 @@ header h2 a{
 }
 
 .toggle.active{
-    background: url('/images/menu-exit.png');
+    background: url('../images/menu-exit.png');
     background-repeat: no-repeat;
     background-size: 40px;
     margin-right: 25vw;
@@ -142,7 +142,7 @@ hr{
 
 .box-odd{
     clip-path: polygon(0 25%, 100% 0, 100% 100%, 0 75%);
-    background: url('/images/about-me-bg.jpg');
+    background: url('../images/about-me-bg.jpg');
     background-size: cover;
     width: 100vw;
     height: 100vh;
@@ -229,7 +229,7 @@ hr{
 
   .box-even{
     clip-path: polygon(0 0, 100% 25%, 100% 75%, 0 100%);
-    background:url('/images/project-even.png') no-repeat;
+    background:url('../images/project-even.png') no-repeat;
     background-size: cover;
     width: 100vw;
     height: 100vh;
