about-me and project styling

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -6,89 +6,14 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     scroll-behavior: smooth;
-    overflow: hidden;
+    overflow-x: hidden;
+}
+body{
+    background-color: #eeeeee;
 }
 
-
-
-/* Background stripes */
-.bg-1{
-    position: absolute;
-    top: 0;
-    width: 100vw;
-    height: 50vh;
-    background-color: rgb(11, 32, 56);
-}
-
-.bg-2{
-    position: absolute;
-    top: 50vh;
-    width: 100vw;
-    height: 100vh;
-    background: linear-gradient(170deg, rgb(11,32,56) 30%, rgb(6,9,46));
-
-}
-
-.bg-3{
-    position: absolute;
-    top: 150vh;
-    width: 100vw;
-    height: 100vh;
-    background: linear-gradient(170deg, rgb(6, 9, 46) 30%, rgb(0,92,128));
-}
-
-.bg-4{
-    position: absolute;
-    top: 250vh;
-    width: 100vw;
-    height: 100vh;
-    background: linear-gradient(190deg, rgb(0,92,128), rgb(82,0, 0));
-
-}
-
-.bg-5{
-    position: absolute;
-    top: 350vh;
-    width: 100vw;
-    height: 100vh;
-    background: linear-gradient(170deg, rgb(82,0,0) 10%, rgb(54, 3, 65) 70%);
-    
-}
-
-.bg-6{
-    position: absolute;
-    top: 450vh;
-    width: 100vw;
-    height: 50vh;
-    background-color: rgb(54,3,65);
-}
-
-
-
-.project-list{
-    position: fixed;
-    top: 3vh;
-    width: 100%;
-    margin-left: 5vw;
-    align-self: center;
-    display: flex;
-    justify-content: center;
-}
-.project-list a{
-    background-color: rgb(77, 125, 170);
-    color: rgb(11, 32, 56);
-    text-decoration: none;
-    padding: 3px 9px;
-    margin: 0 3px;
-    border-radius: 20px;
-    transition: 0.3s;
-    text-transform: uppercase;
-    font-size: 1.1rem;
-}
-
-.project-list a:hover{
-    background-color: rgb(11, 32, 56);
-    color: rgb(77, 125, 170);
+#main{
+    margin-bottom: 10vh;
 }
 
 header{
@@ -96,9 +21,10 @@ header{
     top: 0;
     left: 0;
     color: rgb(233,233,233);
+    background-color: rgb(11, 32, 56);
     width: 100%;
     font-size: 1.3rem;
-    padding: 35px 10px;
+    padding: 10px;
     z-index: 100;
     display: flex;
     justify-content: space-between;
@@ -107,6 +33,22 @@ header{
 header h2 a{
     color: rgb(233,233,233);
     text-decoration: none;
+}
+
+header > div{
+    margin-right: 2vw;
+}
+
+header > div a{
+    color: white;
+    font-size: 1.2rem;
+    font-weight: 600;
+    text-decoration: none;
+    margin-right: 0.4rem;
+}
+
+.current{
+    color: rgb(93, 122, 150);
 }
 
 .logo{
@@ -149,6 +91,7 @@ header h2 a{
     background-position: center;
     cursor: pointer;
     transition: 0.7s;
+    display: none;
 }
 
 .toggle.active{
@@ -192,52 +135,6 @@ hr{
     font-size: 1.1rem;
 }
 
-/* Odd projects 1,3,5 */
-
-.box-odd{
-    clip-path: polygon(0 25%, 100% 0, 100% 100%, 0 75%);
-    background: url('../images/about-me-bg.jpg');
-    background-size: cover;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-
-
-.project-odd{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 10vw;
-    color: rgb(233,233,233);
-}
-
-.project-odd img{
-    width: 100%;
-}
-
-.project-odd p{
-    margin: 2vh 10vw 2vh 0;
-
-}
-
-.project-odd a{
-    text-transform: uppercase;
-    color: rgb(77, 125, 170);
-    text-decoration: none;
-    transition: 0.5s;
-    letter-spacing: 2px;
-}
-.project-odd a:hover{
-    color: orange;
-}
-
-.project-odd a i{
-    font-size: 1.5rem;
-}
 
 .image-container {
     position: relative;
@@ -260,105 +157,184 @@ hr{
     width: 100%;
     opacity: 0;
     transition: .5s ease;
-    background-color: rgb(14, 57, 97);
+    background-color: rgb(11, 32, 56);
+    box-shadow: inset -10px -10px 45px 0px rgb(43, 38, 119);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    font-size: 2rem;
   }
- 
+
+
+
   
   .image-container:hover .project-overlay {
     opacity: 1;
     cursor: pointer;
   }
 
-  .project-text {
-    color: white;
-    font-size: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    text-transform: uppercase;
-    letter-spacing: 1px;
-  }
+ .project-odd, .project-even{
+     display: grid;
+     grid: 100%/ auto auto;
+     width: 70vw;
+     height: 40vh;
+     align-items: center;
+     margin: 2vh auto;
+     padding: 5vh 5vw;
+     transition: 0.5s;
+     border-bottom: 0.5px rgb(0, 0, 99) solid;
+ }
 
-  /* Even projects 2,4,6 */
+ #project3 > div{
+     border: none;
+ }
 
-  .box-even{
-    clip-path: polygon(0 0, 100% 25%, 100% 75%, 0 100%);
-    background:url('../images/project-even.png') no-repeat;
-    background-size: cover;
-    width: 100vw;
-    height: 100vh;
+ .project-odd img, .project-even img{
+     width: 100%;
+     height: auto;
+ }
+ .project-even h1, .project-odd h1{
+     color: rgb(77, 125, 170);
+ }
+
+ .project-even .project-desc{
+     margin-left: 2vw;
+ }
+ .project-odd{
+     text-align: end;
+ }
+ .project-odd .project-desc{
+     margin-right: 2vw;
+ }
+
+ .project-desc a{
+     color: rgb(77, 125, 170);
+     text-decoration: none;
+     text-transform: uppercase;
+     font-weight: 500;
+ }
+
+ .project-desc a:hover{
+    color: rgb(214, 114, 0);
+    text-decoration: none;
+}
+
+.project-group{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: center;
+     border-radius: 10px;
+     width: 80vw;
+     align-items: start;
+     margin: 2vh auto;
+     padding: 0 5vw;
+     transition: 0.5s;
 }
 
-.project-even{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 10vw;
-    color: rgb(233,233,233);
+.group-item .project-overlay{
+    font-size: 1rem;
 }
 
-.project-even img{
-    width: 100%;
-}
-
-
-.project-even .project-desc{
-    margin-left: 10vw;
-}
-.project-even p{
-    margin: 2vh 0 2vh 5vw;
-
-}
-.project-even .project-desc{
-    text-align: end;
-}
-
-.project-even a{
+.section-head{
+    text-align: center;
     text-transform: uppercase;
+    color: rgb(0, 0, 99);
+    margin-bottom: 4vh;
+}
+
+.section-head-top{
+    text-align: center;
+    text-transform: uppercase;
+    color:rgb(0, 0, 99);
+    margin-top: 10vh;
+}
+
+.project-desc .group-item{
+    padding: 0;
+}
+
+.group-item{
+    display: flex;
+    flex-direction: column;
+    padding: 4vh 4vw;
+    text-align: center;
+    color: rgb(0, 0, 99);
+    border-right: 0.5px solid rgb(0, 0, 99);
+}
+.group-item:last-child{
+    border: none;
+}
+
+.group-item .project-desc h1{
+    color: rgb(77, 125, 170);
+    border-bottom: 1px rgb(0, 0, 99) solid;
+    margin-bottom: 3px;
+}
+
+.group-item .project-desc{
+    margin: 5px 0;
+}
+
+.group-item a{
     color: rgb(77, 125, 170);
     text-decoration: none;
-    transition: 0.5s;
-    letter-spacing: 2px;
-}
-.project-even a:hover{
-    color: orange;
+    text-transform: uppercase;
+    font-weight: 500;
+    margin-top: 5px;
 }
 
-.project-even a i{
-    font-size: 1.5rem;
+.group-item a:hover{
+   color: rgb(214, 114, 0);
+   text-decoration: none;
 }
 
-@media screen and (max-width: 1320px) {
-    .project-list a{
-        font-size: 0.9rem;
+
+@media screen and (max-width: 1150px) {
+    .project-even, .project-odd{
+        width: 100vw;
+    }
+    .project-group{
+        width: 90vw;
+    }
+    .group-item h1{
+        font-size: 1.5rem;
     }
     }
     
-@media screen and (max-width: 1150px) {
+@media screen and (max-width: 800px) {
     header h2{
         font-size: 1.5rem;
     }
-    .project-list{
-        margin-left: 10vw;
+    header > div a{
+        font-size: 0.9rem;
     }
-    .project-list a{
-        font-size: 0.7rem;
+    .group-item h1{
+        font-size: 1.2rem;
     }
+    .group-item p{
+        font-size: 0.8rem;
+    }
+
     }
 
 
 
-@media screen and (max-width:800px) {
+@media screen and (max-width:600px) {
     header{
         padding: 0;
     }
+    header >div{
+        display: none;
+    }
+
+    .section-head, .section-head-top{
+        font-size: 1.5rem;
+    }
+ 
     .toggle{
         background-size: 30px;
+        display: block;
     }
     .toggle.active{
         margin: 20vh 0 0 0;
@@ -406,23 +382,12 @@ hr{
         z-index: 100;
         opacity: 1;
     }
-    .project-list{
-        top: 10vh;
-        margin-left: 0;
-        font-size: 0.7rem;
-        display: flex;
-        justify-content: center;
-        
-    }
-    .project-list a{
-        font-size: 0.5rem;
-        text-align: center;
-    }
 
     .project-odd{
-        margin: 0 10vw;
+        display: flex;
         flex-direction: column-reverse;
         height: 60%;
+        margin: 0;
     }
 
     .project-odd p{
@@ -430,9 +395,10 @@ hr{
     }
 
     .project-even{
-        margin: 0 10vw;
+        display: flex;
+        margin: 0;
         flex-direction: column;
-        align-items: center;
+        height: 60%;
     }
 
     .project-even p{
@@ -455,6 +421,10 @@ hr{
 
     .project-desc a{
         font-size: 0.7rem;
+    }
+
+    .group-item a{
+        font-size: 0.65rem;
     }
 
 }
