--- a/styles/resume.css
+++ b/styles/resume.css
@@ -9,9 +9,12 @@
     overflow-x: hidden;
 }
 body{
-    background-color: #000;
+    background-color: #eeeeee;
 }
 
+#main{
+    margin-bottom: 10vh;
+}
 
 header{
     position: fixed;
@@ -51,36 +54,22 @@ header > div a{
     text-transform: uppercase;
     padding-left: 30px;
 }
-#about-main{
+
+.resume-container{
+    width: 100vw;
     display: flex;
-}
-#about-desc{
-    height: 100vh;
-    width: 50vw;
-    float: left;
-    color: white;
-    display: flex;
-    text-align: end;
-    flex-direction: column;
-    align-items: flex-end;
     justify-content: center;
-    margin-left: 20vw;
-}
-.img-container{
-    width: 50vw;
-    height: 100vh;
-    float: right;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    margin-right: 20vw;
-}
-.img-container img{
-    width: auto;
-    height: 50%;
-    object-fit: contain;
 }
 
+#resume{
+    margin-top: 15vh;
+    width: 875px;
+    height: 1127px;
+    border: 1px solid;
+    padding: 10px;
+    box-shadow: 0 0 40px 10px #888888;
+    overflow: hidden;
+}
 
 .menu{
     position: fixed;
